--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my fist simple website</title>
+    <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h2>my first website</h2>
+        <p>Lorem <span >ipsum</span> dolor, sit amet consectetur adipisicing elit. Blanditiis quam veritatis odit eum, enim mollitia rerum animi perspiciatis rem quaerat, vel optio minima et corrupti a veniam magnam similique fugiat.</p>
+    </div>
 </body>
 </html>
