--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
         <h2>my first website</h2>
         <p>Lorem <span >ipsum</span> dolor, sit amet consectetur adipisicing elit. Blanditiis quam veritatis odit eum, enim mollitia rerum animi perspiciatis rem quaerat, vel optio minima et corrupti a veniam magnam similique fugiat.</p>
     </div>
+
+    <h3> how to push incremental in git hub</h3>
 </body>
 </html>
